# GesturePiano

./: CMakeLists.txt  Notes.file  README.md  config.json
apps/: cinder_app_main.cc
gesture_recognition/: calibration.cc  final_project_app.cc  gesture_wrapper.cc  hand_extractor.cc  hand_tracker.cc
include/: final_project_app.h
include/gesturerecognition/: calibration.h  gesture_wrapper.h  hand_extractor.h  hand_tracker.h
include/pianoapp/: piano_engine.h
pianoapp/: piano_engine.cc
